; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/engine/pm/extr_gf100.c_gf100_perfctr_next.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/engine/pm/extr_gf100.c_gf100_perfctr_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_pm = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.nvkm_device* }
%struct.nvkm_device = type { i32 }
%struct.nvkm_perfdom = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvkm_pm*, %struct.nvkm_perfdom*)* @gf100_perfctr_next to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gf100_perfctr_next(%struct.nvkm_pm* %0, %struct.nvkm_perfdom* %1) #0 {
  %3 = alloca %struct.nvkm_pm*, align 8
  %4 = alloca %struct.nvkm_perfdom*, align 8
  %5 = alloca %struct.nvkm_device*, align 8
  store %struct.nvkm_pm* %0, %struct.nvkm_pm** %3, align 8
  store %struct.nvkm_perfdom* %1, %struct.nvkm_perfdom** %4, align 8
  %6 = load %struct.nvkm_pm*, %struct.nvkm_pm** %3, align 8
  %7 = getelementptr inbounds %struct.nvkm_pm, %struct.nvkm_pm* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load %struct.nvkm_device*, %struct.nvkm_device** %9, align 8
  store %struct.nvkm_device* %10, %struct.nvkm_device** %5, align 8
  %11 = load %struct.nvkm_device*, %struct.nvkm_device** %5, align 8
  %12 = load %struct.nvkm_perfdom*, %struct.nvkm_perfdom** %4, align 8
  %13 = getelementptr inbounds %struct.nvkm_perfdom, %struct.nvkm_perfdom* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = add nsw i64 %14, 108
  %16 = load %struct.nvkm_perfdom*, %struct.nvkm_perfdom** %4, align 8
  %17 = getelementptr inbounds %struct.nvkm_perfdom, %struct.nvkm_perfdom* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = sub nsw i32 %18, 64
  %20 = add nsw i32 %19, 39
  %21 = call i32 @nvkm_wr32(%struct.nvkm_device* %11, i64 %15, i32 %20)
  %22 = load %struct.nvkm_device*, %struct.nvkm_device** %5, align 8
  %23 = load %struct.nvkm_perfdom*, %struct.nvkm_perfdom** %4, align 8
  %24 = getelementptr inbounds %struct.nvkm_perfdom, %struct.nvkm_perfdom* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = add nsw i64 %25, 236
  %27 = call i32 @nvkm_wr32(%struct.nvkm_device* %22, i64 %26, i32 17)
  ret void
}

declare dso_local i32 @nvkm_wr32(%struct.nvkm_device*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
